Make sure tooltips always appear on screen.
Nudge tooltips up / down if they are going to appear off-screen. I've fixed the tooltip width ass otherwise tooltips that appear as children of the body are sized differently from tooltips that are children of the node itself, which breaks the positioning calculations (they work on the sizing of the hiden tooltip which is a child of the node)

--- a/css/qp.css
+++ b/css/qp.css
@@ -30,7 +30,7 @@ div[class|='qp-icon'] {
     border: 1px solid black;
     background-color: #FFFFEE;
     padding: 2px;
-    min-width: 10em;
+    width: 30em;
 }
 
 .qp-tt div,
